--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "gatsby-starter-default",
+  "name": "my-blog",
   "private": true,
-  "description": "A simple starter to get up and developing quickly with Gatsby",
+  "description": "A blog about code and books.",
   "version": "0.1.0",
-  "author": "Kyle Mathews <mathews.kyle@gmail.com>",
+  "author": "Junior Alves <jjalves96e@gmail.com>",
   "dependencies": {
     "gatsby": "^2.21.35",
     "gatsby-image": "^2.4.4",
