--- a/package.json
+++ b/package.json
@@ -14,11 +14,13 @@
     "gatsby-plugin-styled-components": "^3.3.10",
     "gatsby-remark-images": "^3.3.25",
     "gatsby-remark-lazy-load": "^1.0.2",
+    "gatsby-remark-prismjs": "^3.5.10",
     "gatsby-remark-relative-images-v2": "^0.1.5",
     "gatsby-source-filesystem": "^2.3.3",
     "gatsby-transformer-remark": "^2.8.28",
     "gatsby-transformer-sharp": "^2.5.2",
     "lazysizes": "^5.2.2",
+    "prismjs": "^1.21.0",
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
