--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "prismjs": "^1.21.0",
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
+    "react-disqus-comments": "1.4.0",
     "react-dom": "^16.13.1",
     "react-helmet": "^6.0.0",
     "styled-components": "^5.1.1",
