--- a/package.json
+++ b/package.json
@@ -5,30 +5,39 @@
   "version": "0.1.0",
   "author": "Junior Alves <jjalves96e@gmail.com>",
   "dependencies": {
-    "gatsby": "^2.21.35",
-    "gatsby-image": "^2.4.4",
-    "gatsby-plugin-manifest": "^2.4.4",
-    "gatsby-plugin-offline": "^3.2.2",
-    "gatsby-plugin-react-helmet": "^3.3.1",
-    "gatsby-plugin-sharp": "^2.6.3",
-    "gatsby-plugin-sitemap": "^2.4.11",
-    "gatsby-plugin-styled-components": "^3.3.10",
-    "gatsby-remark-images": "^3.3.25",
-    "gatsby-remark-lazy-load": "^1.0.2",
-    "gatsby-remark-prismjs": "^3.5.10",
+    "dotenv": "^8.1.0",
+    "gatsby": "^2.13.50",
+    "gatsby-image": "^2.2.8",
+    "gatsby-plugin-algolia-search": "0.5.0",
+    "gatsby-plugin-manifest": "^2.2.4",
+    "gatsby-plugin-netlify-cms": "^4.1.9",
+    "gatsby-plugin-offline": "^2.2.4",
+    "gatsby-plugin-react-helmet": "^3.1.3",
+    "gatsby-plugin-sharp": "^2.2.9",
+    "gatsby-plugin-sitemap": "^2.2.8",
+    "gatsby-plugin-styled-components": "^3.1.2",
+    "gatsby-plugin-transition-link": "^1.12.4",
+    "gatsby-remark-images": "^3.1.12",
+    "gatsby-remark-lazy-load": "^1.0.1",
+    "gatsby-remark-prismjs": "^3.3.5",
+    "gatsby-remark-relative-images": "^0.2.3",
     "gatsby-remark-relative-images-v2": "^0.1.5",
-    "gatsby-source-filesystem": "^2.3.3",
-    "gatsby-transformer-remark": "^2.8.28",
-    "gatsby-transformer-sharp": "^2.5.2",
-    "lazysizes": "^5.2.2",
+    "gatsby-source-filesystem": "^2.1.8",
+    "gatsby-transformer-remark": "^2.6.14",
+    "gatsby-transformer-sharp": "^2.2.5",
+    "gsap": "^2.1.3",
+    "lazysizes": "^5.1.1",
+    "netlify-cms-app": "^2.9.7",
     "prismjs": "^1.21.0",
     "prop-types": "^15.7.2",
-    "react": "^16.13.1",
-    "react-disqus-comments": "1.4.0",
-    "react-dom": "^16.13.1",
-    "react-helmet": "^6.0.0",
-    "styled-components": "^5.1.1",
-    "styled-icons": "^10.16.0"
+    "react": "^16.8.6",
+    "react-disqus-comments": "^1.4.0",
+    "react-dom": "^16.8.6",
+    "react-helmet": "^5.2.1",
+    "react-instantsearch-dom": "^5.7.0",
+    "styled-components": "^4.3.2",
+    "styled-icons": "^8.3.0",
+    "styled-media-query": "^2.1.2"
   },
   "devDependencies": {
     "eslint": "^6.8.0",
