--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -21,14 +21,14 @@ collections:
           label: 'Date',
           name: 'date',
           widget: 'datetime',
-          format: YYYY-MM-DD hh:mm:ss,
+          format: 'YYYY-MM-DD hh:mm:ss',
         }
       - { label: 'Image', name: 'image', widget: 'image' }
       - {
           label: 'Category',
           name: 'category',
           widget: 'select',
-          options: ['mobile', 'linux', 'js', 'dev', 'git', 'web', 'misc'],
+          options: ['react', 'js', 'dev', 'misc', 'books', 'css'],
         }
       - {
           label: 'Background',
@@ -36,13 +36,12 @@ collections:
           widget: 'select',
           options:
             [
-              { label: 'Mobile', value: '#03A9F4' },
-              { label: 'Linux', value: '#2DA0C3' },
-              { label: 'JS', value: '#D6BA32' },
-              { label: 'Dev', value: '#EB7728' },
-              { label: 'Git', value: '#7D669E' },
-              { label: 'Web', value: '#0277BD' },
-              { label: 'Misc', value: '#7AAB13' },
+              { label: 'React', value: '#7b2cbf' },
+              { label: 'JS', value: '#ffbe0b' },
+              { label: 'Dev', value: '#3a86ff' },
+              { label: 'Misc', value: '#bf2c2c' },
+              { label: 'Books', value: '#2cbf33' },
+              { label: 'CSS', value: '#ff006e' },
             ],
         }
       - { label: 'Body', name: 'body', widget: 'markdown' }
