--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "author": "Junior Alves <jjalves96e@gmail.com>",
   "dependencies": {
     "dotenv": "^8.1.0",
-    "gatsby": "^2.13.50",
+    "gatsby": "^2.24.47",
     "gatsby-image": "^2.2.8",
     "gatsby-plugin-algolia-search": "0.5.0",
     "gatsby-plugin-google-analytics": "^2.3.13",
@@ -29,6 +29,7 @@
     "gsap": "^3.5.0",
     "lazysizes": "^5.1.1",
     "netlify-cms-app": "^2.9.7",
+    "netlify-plugin-gatsby-cache": "^0.3.2",
     "prismjs": "^1.21.0",
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
@@ -57,7 +58,7 @@
   ],
   "license": "MIT",
   "scripts": {
-    "build": "gatsby build",
+    "build": "GATSBY_EXPERIMENTAL_PAGE_BUILD_ON_DATA_CHANGES=true gatsby build --log-pages",
     "develop": "gatsby develop",
     "format": "prettier --write \"**/*.{js,jsx,json,md}\"",
     "start": "npm run develop",
