--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react": "^16.8.6",
     "react-disqus-comments": "^1.4.0",
     "react-dom": "^16.8.6",
+    "react-ga": "^3.1.2",
     "react-helmet": "^5.2.1",
     "react-instantsearch-dom": "^5.7.0",
     "styled-components": "^4.3.2",
