feat: add Search component

--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,6 @@
+GATSBY_ALGOLIA_APP_ID=XXXX
+GATSBY_ALGOLIA_SEARCH_KEY=XXXX
+ALGOLIA_ADMIN_KEY=XXXX
+GATSBY_ALGOLIA_INDEX_NAME=XXXX
+
 TRACKING_ID:xxxx
