--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "gatsby-transformer-sharp": "^2.2.5",
     "gsap": "^3.5.0",
     "lazysizes": "^5.1.1",
+    "lottie-web": "^5.7.3",
     "netlify-cms-app": "^2.9.7",
     "netlify-plugin-gatsby-cache": "^0.3.2",
     "prismjs": "^1.21.0",
