chore: netlify configs

--- a/netlify.toml
+++ b/netlify.toml
@@ -1,5 +1,10 @@
 [build]
   publish = "public"
+  command = "gatsby build"
+
+[build.environment]
+  YARN_VERSION = "1.22.4"
+  YARN_FLAGS = "--no-ignore-optional"
 
 [[plugins]]
   package = "netlify-plugin-gatsby-cache"
