--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "gatsby": "^2.24.47",
     "gatsby-image": "^2.2.8",
     "gatsby-plugin-algolia-search": "0.5.0",
+    "gatsby-plugin-feed": "^2.5.11",
     "gatsby-plugin-google-analytics": "^2.3.13",
     "gatsby-plugin-manifest": "^2.3.6",
     "gatsby-plugin-netlify-cms": "^4.1.9",
