--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -2,7 +2,7 @@ backend:
   name: github
   repo: jjunior96/study-blog
   branch: master
-  site_domain: alvesjunior.netlify.app
+  site_domain: devjuniorplus.com.br
 
 publish_mode: editorial_workflow
 media_folder: 'static/assets/images'
