--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "react-ga": "^3.1.2",
     "react-helmet": "^5.2.1",
     "react-instantsearch-dom": "^6.7.0",
+    "slugify": "^1.4.5",
     "styled-components": "^4.3.2",
     "styled-icons": "^8.3.0",
     "styled-media-query": "^2.1.2"
