--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "version": "2.0.0",
   "author": "Junior Alves <jjalves96e@gmail.com>",
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.32",
+    "@fortawesome/react-fontawesome": "fortawesome/react-fontawesome",
     "@styled-icons/foundation": "^10.15.1",
     "@styled-icons/simple-icons": "^10.17.0",
     "algoliasearch": "^4.4.0",
@@ -42,6 +44,7 @@
     "react-ga": "^3.1.2",
     "react-helmet": "^5.2.1",
     "react-instantsearch-dom": "^6.7.0",
+    "react-share": "^4.3.0",
     "slugify": "^1.4.5",
     "styled-components": "^4.3.2",
     "styled-icons": "^8.3.0",
