--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -1,8 +1,9 @@
 backend:
   name: github
-  repo: jjunior96/study-blog
+  repo: jjunior96/www.devjuniorplus.com.br
   branch: master
   site_domain: devjuniorplus.com.br
+  base_url: https://www.devjuniorplus.com.br
 
 publish_mode: editorial_workflow
 media_folder: 'static/assets/images'
